[package]
name = "ddc-primitives"
version = "7.3.2"
authors = ["Cerebellum-Network"]
edition = "2021"
homepage = "https://cere.network/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Cerebellum-Network/ddc-primitives"

[dependencies]
blake2 = { version = "0.10.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ink = { version = "5.1.0", default-features = false }
log = { version = "0.4.22", default-features = false }
polkadot-ckb-merkle-mountain-range = { version = "0.8.1", default-features = false }
polkadot-sdk = { version = "=2512.3.2", default-features = false, features = ["frame-support", "frame-system", "sp-application-crypto", "sp-core", "sp-io", "sp-runtime", "sp-std"] }
prost = { version = "0.12.4", default-features = false, features = ["prost-derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false }
serde_with = { version = "3.12.0", default-features = false, features = ["base64", "macros"] }

[build-dependencies]
prost-build = "0.13.2"

[features]
default = ["std"]
std = [
  "hex/std",
  "blake2/std",
  "polkadot-ckb-merkle-mountain-range/std",
  "codec/std",
  "polkadot-sdk/std",
  "scale-info/std",
  "ink/std",
]
runtime-benchmarks = [
  "polkadot-sdk/runtime-benchmarks",
]
